objects/RedeemPointsProductCategory__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>LoyaltyProgramPartner</referenceTo>
        <relationshipLabel>Redeem Points Product Categories</relationshipLabel>
        <relationshipName>Redeem_Points_Product_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCategory__c</fullName>
        <label>Product Category</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image_Name__c</fullName>
        <inlineHelpText>Enter the name of the static resource image that you want to associate with the product.</inlineHelpText>
        <label>Product Image Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>RedeemPointsProductCategories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RedemptionType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Redemption Type</label>
        <referenceTo>JournalSubType</referenceTo>
        <relationshipLabel>Redeem Points Product Categories</relationshipLabel>
        <relationshipName>Redeem_Points_Product_Categories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VoucherDefinitionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voucher Definition</label>
        <referenceTo>VoucherDefinition</referenceTo>
        <relationshipLabel>Redeem Points Product Categories</relationshipLabel>
        <relationshipName>Redeem_Points_Product_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Redeem Points Product Category</label>
    <listViews>
        <fullName>All_Redeem_Points_Product_Category</fullName>
        <columns>NAME</columns>
        <columns>RedemptionType__c</columns>
        <columns>Product__c</columns>
        <columns>ProductCategory__c</columns>
        <columns>Partner__c</columns>
        <columns>VoucherDefinitionId__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Points__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Redeem Points Product Category</label>
    </listViews>
    <nameField>
        <label>Redeem Points Product Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Redeem Points Product Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>